@@ -8,6 +8,9 @@ Version 33
 
 --Got rid of terminal print out when a mobile steps on a button.
 
+--Fixed so that Un-ignore All button does not jump back to the top of the house
+  list (thanks MMaster).
+
 
 
 
